Это нам второй комит

--- a/lesson_1_basic/index.html
+++ b/lesson_1_basic/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <link rel="stylesheet" href="./css/style.css">
-
+  проверка гита
   <script src="./js/script.js"></script>
   
 </body>
