Это 8 задание коммит

--- a/lesson_7_on_video/index.html
+++ b/lesson_7_on_video/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <button class="btn">Animate</button>
+  <button class="str">Start</button>
+  <button class="bck">Back</button>
+  <button class="stp">Stop</button>
   <div class="wrapper">
     <div class="box"></div>
   </div>
